--- a/Slider/style.css
+++ b/Slider/style.css
@@ -1,21 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-
 body {
-    font-family: Poppins;
-    background-color: black;
-    color: #eee;
     margin: 0;
+    background-color:#000;
+    color: #eee;
+    font-family: Poppins;
     font-size: 12px;
 }
-
 a {
     text-decoration: none;
-    color: #eee;
 }
-
 header {
-
     width: 1140px;
     max-width: 80%;
     margin: auto;
@@ -25,12 +19,11 @@ header {
     position: relative;
     z-index: 100;
 }
-
 header a {
-
+    color: #eee;
     margin-right: 40px;
 }
-
+/* carousel */
 .carousel {
     width: 100vw;
     height: 100vh;
@@ -38,18 +31,17 @@ header a {
     margin-top: -50px;
     position: relative;
 }
-
 .carousel .list .item {
+    width: 100%;
+    height: 100%;
     position: absolute;
     inset: 0 0 0 0;
 }
-
 .carousel .list .item img{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-
 .carousel .list .item .content {
     position: absolute;
     top: 20%;
@@ -62,9 +54,7 @@ header a {
     color: #fff;
     text-shadow: 0 5px 10px #0004;
 }
-
 .carousel .list .item .content .author {
-    font-size: 1.3 nem;
     font-weight: bold;
     letter-spacing: 10px;
 }
@@ -76,11 +66,11 @@ header a {
     line-height: 1.3em;    
 }
 
-.carousel .list .item .content .topic {
+.carousel .list .item .topic {
        color: #f1683a;
 }
 
-.carousel .list .item .content .buttons {
+.carousel .list .item .buttons {
     display: grid;
     grid-template-columns: repeat(2, 130px);
     grid-template-rows: 40px;
@@ -89,7 +79,6 @@ header a {
 }
 
 .carousel .list .item .content .button {
-
     border: none;
     background-color: #eee;
     letter-spacing: 3px;
@@ -98,7 +87,6 @@ header a {
 }
 
 .carousel .list .item .content button:nth-child(2) {
-
     background-color: transparent;
     color: #eee;
     border: 1px solid #eee;
@@ -126,10 +114,10 @@ header a {
     height: 100%;
     object-fit: cover; 
     border-radius: 20px;
-
 }
 
 .thumbnail .item .content {
+    color: #fff;
     position: absolute;
     bottom: 10px;
     left: 10px;
@@ -137,7 +125,11 @@ header a {
 }
 
 .thumbnail .item .content .title {
-    font-weight: bold;
+    font-weight: 500;
+}
+
+.thumbnail .item .content .description{
+    font-weight: 300;
 }
 
 .arrows {
@@ -157,57 +149,180 @@ header a {
     border-radius: 50%;
     background-color: #eee4;
     border: none;
-    font-family: monospace;
     color: #fff;
+    font-family: monospace;
     font-weight: bold;
-    font-size: large;
     transition: 0.5s;
     z-index: 100;
 }
-
 .arrows button:hover {
     background-color: #eee;
     color: #555;
 }
 
+                                            /* animation */
+
 .carousel .list .item:nth-child(1){
     z-index: 1;
 }
+
+/* animation text in first item */
 
 .carousel .list .item:nth-child(1) .author,
 .carousel .list .item:nth-child(1) .title,
 .carousel .list .item:nth-child(1) .topic,
 .carousel .list .item:nth-child(1) .des,
-.carousel .list .item:nth-child(1) .buttons{
+.carousel .list .item:nth-child(1) .buttons
+{
     transform: translateY(50px);
     filter: blur(20px);
     opacity: 0;
     animation: showContent 0.5s 1s linear forwards;
 }
-
 @keyframes showContent {
     to {
-        opacity: 1;
-        filter: blur(0);
         transform: translateY(0);
+        filter: blur(0);
+        opacity: 1;
     }
 }
 
 .carousel .list .item:nth-child(1) .title{
-    animation-delay: 1.2s;
+    animation-delay: 1.2s!important;
 }
 .carousel .list .item:nth-child(1) .topic{
-    animation-delay: 1.4s;
+    animation-delay: 1.4s!important;
 }
 .carousel .list .item:nth-child(1) .des{
-    animation-delay: 1.6s;
+    animation-delay: 1.6s!important;
 }
 .carousel .list .item:nth-child(1) .buttons{
-    animation-delay: 1.8s;
+    animation-delay: 1.8s!important;
+}
+
+/* create animation when next click */
+
+.carousel.next .list .item:nth-child(1) img {
+    width: 150px;
+    height: 220px;
+    position: absolute;
+    left: 50%;
+    bottom: 50px;
+    border-radius: 30px;
+    animation: showImage 0.5s linear forwards;
+}
+
+@keyframes showImage {
+    to {
+        width: 100%;
+        height: 100%;
+        left: 0;
+        bottom: 0;
+        border-radius: 0;
+    }
+}
+
+.carousel.next .thumbnail .item:nth-last-child(1){
+    overflow: hidden;
+    animation: showThumbnail .5s linear 1 forwards;
+}
+
+.carousel.prev .list .item img{
+    z-index: 100;
+}
+
+@keyframes showThumbnail {
+     from {
+        width: 0;
+        opacity: 0;
+     }
+}
+
+.carousel.next .thumbnail {
+    transform: translateX(150px);
+    animation: effectNext .5s linear 1 forwards;
+}
+
+@keyframes effectNext {
+    to {
+        transform: translateX(150px);
+    }
+}
+
+/* running time */
+
+.carousel .time{
+    position: absolute;
+    z-index: 1000;
+    width: 0%;
+    height: 3px;
+    background-color: #f1683a;
+    left: 0;
+    top: 0;
+}
+
+.carousel.next .time,
+.carousel.prev .time{
+    animation: runningTime 3s linear 1 forwards;
+}
+@keyframes runningTime{
+    from{ width: 100%}
+    to{width: 0}
 }
 
 
+/* prev click */
 
+.carousel.prev .list .item:nth-child(2){
+    z-index: 2;
+}
 
+.carousel.prev .list .item:nth-child(2) img{
+    animation: outFrame 0.5s linear 1 forwards;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+@keyframes outFrame{
+    to{
+        width: 150px;
+        height: 220px;
+        bottom: 50px;
+        left: 50%;
+        border-radius: 20px;
+    }
+}
 
+.carousel.prev .thumbnail .item:nth-child(1){
+    overflow: hidden;
+    opacity: 0;
+    animation: showThumbnail .5s linear 1 forwards;
+}
+.carousel.next .arrows button,
+.carousel.prev .arrows button{
+    pointer-events: none;
+}
+.carousel.prev .list .item:nth-child(2) .content .author,
+.carousel.prev .list .item:nth-child(2) .content .title,
+.carousel.prev .list .item:nth-child(2) .content .topic,
+.carousel.prev .list .item:nth-child(2) .content .des,
+.carousel.prev .list .item:nth-child(2) .content .buttons
+{
+    animation: contentOut 1.5s linear 1 forwards!important;
+}
 
+@keyframes contentOut{
+    to{
+        transform: translateY(-150px);
+        filter: blur(20px);
+        opacity: 0;
+    }
+}
+@media screen and (max-width: 678px) {
+    .carousel .list .item .content{
+        padding-right: 0;
+    }
+    .carousel .list .item .content .title{
+        font-size: 30px;
+    }
+}
